# whisper-meeting-transcription-and-translation

./: .gitignore  Dockerfile  PRD.md  QUICKSTART.cn.md  QUICKSTART.md  README.cn.md  README.md  main.py  pyproject.toml  requirements.txt  subtitle.py  transcribe.py  translate.py
OLD/: 01_generate_subtitles.py  02_translate_subtitles.py  03_split_subtitles.py  视频时长统计.md
rst_summarizer/: README.md  main.py
srt_summarizer/: QUICKSTART.cn.md  QUICKSTART.md  README.cn.md  README.md  main.py
test/: test_main.py  test_srt_summarizer.py  test_transcribe.py  test_translate.py
