[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "whisper-subtitle"
version = "0.1.0"
description = "MLX-accelerated Whisper transcription + Ollama Chinese translation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]

[project.scripts]
whisper-subtitle = "main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
